applications/thanos/base/query-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query
spec:
  rules:
  - host: thanos-query.d15ef0b9-5274-4557-9d1a-7969c3a28b75.lb.civo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thanos-query
            port:
              number: 9090
  ingressClassName: nginx
